[gd_scene load_steps=8 format=2]

[ext_resource path="res://KinematicBody2D.gd" type="Script" id=1]
[ext_resource path="res://assets/Rocket (New).png" type="Texture" id=2]
[ext_resource path="res://HUDCanvasLayer.tscn" type="PackedScene" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Damage"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Flash"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=3]
resource_name = "Rest"
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="CapsuleShape2D" id=4]
radius = 17.0
height = 72.0

[node name="KinematicBody2D" type="KinematicBody2D"]
position = Vector2( 0.24292, 0 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0.4361, 0.5 )
scale = Vector2( 0.320872, 0.25625 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="EffectsAnimation" type="AnimationPlayer" parent="."]
anims/Damage = SubResource( 1 )
anims/Flash = SubResource( 2 )
anims/Rest = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2 )
shape = SubResource( 4 )
one_way_collision = true

[node name="HUDCanvasLayer" parent="." instance=ExtResource( 3 )]

[node name="DamageTimer" type="Timer" parent="."]
wait_time = 0.8
[connection signal="timeout" from="DamageTimer" to="." method="_on_DamageTimer_timeout"]
